Fixed most layout issues with bipartite control which now adapts itself to layout space

--- a/docs/css/imerss-viz-all.css
+++ b/docs/css/imerss-viz-all.css
@@ -782,8 +782,6 @@ a.ui-button:active,
 .imerss-map {
     height: 100%;
     width: 100%;
-    min-width: 480px;
-    min-height: 320px;
 }
 
 
