--- a/src/client/css/imerss-core.css
+++ b/src/client/css/imerss-core.css
@@ -74,8 +74,6 @@
 .imerss-map {
     height: 100%;
     width: 100%;
-    min-width: 480px;
-    min-height: 320px;
 }
 
 
